--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 /* CSS file */
-
-* {
+html,
+body {
   margin: 0;
+  height: 100%;
+}
+#c {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
