--- a/style.css
+++ b/style.css
@@ -10,27 +10,16 @@ body {
   display: block;
 }
 
-#loading {
-  position: fixed;
-  top: 0;
+.split {
+  position: absolute;
   left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-#loading .progress {
-  margin: 1.5em;
-  border: 1px solid white;
-  width: 50vw;
-}
-
-#loading .progressbar {
-  margin: 2px;
-  background: white;
-  height: 1em;
-  transform-origin: top left;
-  transform: scaleX(0);
+.split > div {
+  width: 100%;
+  height: 100%;
 }
